# bt-bridge

./: Cargo.toml  README.md
.cargo/: config.toml
ancillary/data/: capture.pcap  capture.sh
ancillary/scripts/: Dockerfile  install-zwift.sh  mdns-browse.sh  run-tpv.sh  run-zwift.sh
ancillary/scripts/downloads/: README.txt
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  mdns.rs  split.rs  status.rs
crates/core/src/bluez/: device.rs  manage.rs  mod.rs  monitor.rs
crates/core/src/bridge/: lookup.rs  mod.rs
crates/core/src/dircon/: frame.rs  mod.rs  notify.rs  server.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  controller.rs  gpu.rs  main.rs  shared.rs  tracing_capture.rs
crates/gui/src/ui/: devices.rs  log.rs  mod.rs  theme.rs  toolbar.rs
crates/sim/: Cargo.toml
crates/sim/src/: main.rs
