[package]
name = "bt-bridge-gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bt-bridge-gui"
path = "src/main.rs"

[dependencies]
bt-bridge-core = { path = "../core" }
anyhow             = "1"
futures            = "0.3"
chrono             = { version = "0.4", default-features = false, features = ["clock"] }
eframe             = "0.35"
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = "1"
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal"] }
clap = { version = "4.6.1", features = ["derive"] }
pollster = "0.4.0"
